deploy/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytasks
  namespace: mytasks
spec:
  type: ClusterIP
  selector:
    app: mytasks
  ports:
    - name: http
      port: 80
      targetPort: http
