deploy/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytasks
  namespace: mytasks
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: todo.sandragon.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mytasks
                port:
                  number: 80
